[package]
name = "async-await"
version = "0.1.0"
authors = ["Cayle Sharrock <cayle@nimbustech.biz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version ="^0.2.0-alpha.4" }
tokio-executor = { version ="^0.2.0-alpha.4", features = ["threadpool"] }
futures-preview = {version = "0.3.0-alpha.18" }
